data/theme/gnome-shell.css
/* ... */
.summary-source-button:rtl {
    padding-left: 12px;
}

.summary-source-button:last-child:ltr {
    padding-right: 12px;
}

.summary-source-button:last-child:rtl {
    padding-left: 12px;
}

.summary-source {
    padding-right: 4px;
    padding-left: 4px;
}

.source-title {
    font-size: 9pt;
    font-weight: bold;
    padding-left: 4px;
}

.source-title:rtl {
    padding-left: 0px;
    padding-right: 4px;
}

/* App Switcher */
#altTabPopup {
    padding: 8px;
    spacing: 16px;
}

.switcher-list {
    background: rgba(0,0,0,0.8);
    border: 1px solid rgba(128,128,128,0.40);
    border-radius: 24px;
    padding: 20px;

    font-size: 9pt;
    color: white;
}

.switcher-list-item-container {
    spacing: 8px;
}

.thumbnail-scroll-gradient-left {
    background-gradient-direction: horizontal;
    background-gradient-start: rgba(51, 51, 51, 1.0);
    background-gradient-end: rgba(51, 51, 51, 0);
    border-radius: 24px;
    border-radius-topright: 0px;
    border-radius-bottomright: 0px;
    width: 60px;
}

.thumbnail-scroll-gradient-right {
    background-gradient-direction: horizontal;
    background-gradient-start: rgba(51, 51, 51, 0);
    background-gradient-end: rgba(51, 51, 51, 1.0);
    border-radius: 24px;
    border-radius-topleft: 0px;
    border-radius-bottomleft: 0px;
    width: 60px;
}

.switcher-list .item-box {
    padding: 8px;
    border-radius: 8px;
}

.switcher-list .item-box:outlined {
    padding: 6px;
    border: 2px solid rgba(85,85,85,1.0);
}

.switcher-list .item-box:selected {
    background: rgba(255,255,255,0.33);
}

.switcher-list .thumbnail-box {
    padding: 2px;
    spacing: 4px;
}

.switcher-list .thumbnail {
    width:  256px;
}

.switcher-list .separator {
    width: 1px;
    background: rgba(255,255,255,0.33);
}

.ripple-box {
    width: 52px;
    height: 52px;
    background-image: url("corner-ripple.png");
}

.switcher-arrow {
    border-color: rgba(0,0,0,0);
    color: #808080;
}

.switcher-arrow:highlighted {
    border-color: rgba(0,0,0,0);
    color: white;
}

/* Workspace Switcher */
.workspace-switcher-group {
    padding: 12px;
}

.workspace-switcher-container {
    background: rgba(0,0,0,0.8);
    border: 1px solid rgba(128,128,128,0.40);
    border-radius: 24px;
    padding: 20px;
}

.workspace-switcher {
    background: transparent;
    border: 0px;
    border-radius: 0px;
    padding: 0px;
    spacing: 8px;
}

.ws-switcher-active-up {
    height: 100px;
    border: 0px;
    background: rgba(255,255,255,0.5);
    background-image: url("ws-switch-arrow-up.svg");
    border-radius: 8px;
}

.ws-switcher-active-down {
    height: 100px;
    border: 0px;
    background: rgba(255,255,255,0.5);
    background-image: url("ws-switch-arrow-down.svg");
    border-radius: 8px;
}

.ws-switcher-box {
    height: 96px;
    border: 2px solid rgba(85,85,85,0.5);
    background: transparent;
    border-radius: 8px;
}

/* Modal Dialogs */
.modal-dialog {
    font-size: 12pt;
    border-radius: 24px;
    background-color: rgba(0.0, 0.0, 0.0, 0.9);
    border: 2px solid #868686;
    color: #ffffff;

    padding-right: 42px;
    padding-left: 42px;
    padding-bottom: 30px;
    padding-top: 30px;
}

.modal-dialog-button-box {
    spacing: 21px;
}

.modal-dialog-button {
    border: 1px solid #8b8b8b;
    border-radius: 18px;
    font-size: 10.5pt;

    margin-left: 10px;
    margin-right: 10px;

    padding-left: 32px;
    padding-right: 32px;
    padding-top: 8px;
    padding-bottom: 8px;

    background-gradient-direction: vertical;
    background-gradient-start: #29323b;
    background-gradient-end: #121a24;
}

.modal-dialog-button:active,
.modal-dialog-button:pressed {
    border-color: #a5a5a5;
    background-gradient-start: #121a24;
    background-gradient-end: #29323b;
}

.modal-dialog-button:focus {
    border: 2px solid #a5a5a5;

    padding-left: 31px;
    padding-right: 31px;
    padding-top: 7px;
    padding-bottom: 7px;
}

/* Run Dialog */
.run-dialog-label {
    font-size: 9pt;
    color: white;
}

.run-dialog-error-label {
    font-size: 9pt;
    color: white;
}

.run-dialog-error-box {
    padding-top: 15px;
    spacing: 5px;
}

.run-dialog-entry {
    font-size: 10.5pt;
    font-weight: bold;
    width: 23em;
    color: white;
}

.run-dialog {
    border-radius: 16px;

    padding-right: 21px;
    padding-left: 21px;
    padding-bottom: 15px;
    padding-top: 15px;
}

.lightbox {
    background-color: rgba(0, 0, 0, 0.4);
}

/* End Session Dialog */
.end-session-dialog {
    spacing: 42px;
}

.end-session-dialog-subject {
    font-size: 12pt;
    font-weight: bold;
    color: #666666;
    padding-top: 10px;
    padding-left: 17px;
    padding-bottom: 30px;
}

.end-session-dialog-subject:rtl {
    padding-left: 0px;
    padding-right: 17px;
}

.end-session-dialog-description {
    font-size: 10pt;
    color: white;
    padding-left: 17px;
    width: 28em;
}

.end-session-dialog-description:rtl {
    padding-right: 17px;
}

.end-session-dialog-logout-icon {
    border: 2px solid #8b8b8b;
    border-radius: 5px;
    width: 32px;
    height: 32px;
}

.end-session-dialog-shutdown-icon {
    width: 32px;
    height: 32px;
}

.end-session-dialog-app-list {
    font-size: 10pt;
    max-height: 200px;
    padding-top: 42px;
    padding-left: 49px;
    padding-right: 32px;
}

.end-session-dialog-app-list:rtl {
    padding-right: 49px;
    padding-left: 32px;
}

.end-session-dialog-app-list-item {
    color: #ccc;
}

.end-session-dialog-app-list-item:hover {
    color: white;
}

.end-session-dialog-app-list-item:ltr {
    padding-right: 1em;
}

.end-session-dialog-app-list-item:rtl {
    padding-left: 1em;
}

.end-session-dialog-app-list-item-icon:ltr {
    padding-right: 17px;
}

.end-session-dialog-app-list-item-icon:rtl {
    padding-left: 17px;
}

.end-session-dialog-app-list-item-name {
    font-size: 10pt;
}

.end-session-dialog-app-list-item-description {
    font-size: 8pt;
    color: #444444;
}
/* ... */

